--- a/oadmin/src/main/resources/static/css/index.styl
+++ b/oadmin/src/main/resources/static/css/index.styl
@@ -1,12 +1,19 @@
 @import './mixin'
 
 body
-	color: #222
+  color: #222
 
 h2
-	text-align: center
-	font-size: 22px
+  text-align: center
+  font-size: 22px
 
 p
-	text-align: center
-	font-size: 16px
+  text-align: center
+  font-size: 16px
+
+.navbar-form
+  max-width: 500px
+
+
+
+
