more work & bug fixes

--- a/oadmin/src/main/resources/static/public/changepasswd.jade
+++ b/oadmin/src/main/resources/static/public/changepasswd.jade
@@ -20,17 +20,17 @@ html(lang='en')
             li.dropdown
               a.dropdown-toggle(href='#' data-toggle='dropdown')
                 span.glyphicon.glyphicon-wrench
-                b.caret
-                ul.dropdown-menu
-                  li
-                    a(href='/EditProfile') Edit Profile
+                span.caret
+              ul.dropdown-menu
+                li
+                  a(href='/EditProfile') Edit Profile
             li
               a(href='/Logout')
                 span.glyphicon.glyphicon-log-out 
     .container
       .page-header
-      h2
-        | Change your password
+        h2
+          | Change your password
     .container
       form.form-changepasswd(role='form')
         fieldset
