--- a/oadmin/src/main/resources/static/public/index.jade
+++ b/oadmin/src/main/resources/static/public/index.jade
@@ -25,15 +25,15 @@ html(lang="en")
             li.dropdown
               a.dropdown-toggle(href='#' data-toggle='dropdown')
                 span.glyphicon.glyphicon-wrench
-                b.caret
-                ul.dropdown-menu
-                  li
-                    a(href='/EditProfile') Edit Profile
-                  li
-                    a(href='/ChangePasswd') Change Password
-                  li.divider
-                  li
-                    a(href='#/Sessions') Sessions
+                span.caret
+              ul.dropdown-menu
+                li
+                  a(href='/EditProfile') Edit Profile
+                li
+                  a(href='/ChangePasswd') Change Password
+                li.divider
+                li
+                  a(href='#/Sessions') Sessions
             li
               a(href='/Logout')
                 span.glyphicon.glyphicon-log-out          
