--- a/oadmin/src/main/resources/static/public/login.jade
+++ b/oadmin/src/main/resources/static/public/login.jade
@@ -7,7 +7,7 @@ html(lang='en')
     meta(name='description' content='')
     meta(name='author' content='Amadou Cisse')
     link(rel='shortcut icon' href='/assets/ico/favicon.png')
-    title Schola - Signin
+    title Schola - Sign In
     link(href={uri("/assets/css/bootstrap.css")} rel='stylesheet')
     link(href={uri("/assets/css/signin.css")} rel='stylesheet')
   body
