--- a/oadmin/src/main/resources/static/public/index.jade
+++ b/oadmin/src/main/resources/static/public/index.jade
@@ -6,6 +6,7 @@ html(lang="en")
     meta(name='description' content='')
     meta(name='author' content='Amadou Cisse')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    link(rel='shortcut icon' href={uri("/assets/ico/favicon.png")})
     title Schola
     link(href={uri("/assets/css/bootstrap.css")} rel='stylesheet' type='text/css' charset='utf-8')
     link(rel='stylesheet' href={uri("/assets/application.css")} type='text/css' charset='utf-8')
@@ -28,7 +29,7 @@ html(lang="en")
                 span.caret
               ul.dropdown-menu
                 li
-                  a(href='/EditProfile') Edit Profile
+                  a(href='/EditProfile') Edit Account
                 li
                   a(href='/ChangePasswd') Change Password
                 li.divider
