--- a/oadmin/src/main/resources/static/public/css/lostpasswd.css
+++ b/oadmin/src/main/resources/static/public/css/lostpasswd.css
@@ -3,24 +3,35 @@ body {
   padding-bottom: 40px;
 }
 
-.page-header{border-bottom:none}
+.page-header {
+  border-bottom:none;
+  margin-bottom: 0;
+}
 
-.form-changepasswd {  
+.form-lostpasswd {  
   padding: 15px;
 }
 
-.form-changepasswd .form-control {
+.form-lostpasswd .form-lostpasswd-heading {
+  margin-bottom: 10px;
+}
+
+.form-lostpasswd .form-control {
+  max-width: 330px;
   position: relative;
   font-size: 16px;
   height: auto;
-  padding: 10px;
-  max-width: 330px;
+  padding: 10px;  
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-.form-changepasswd .form-control:focus {
+#recaptcha, .form-lostpasswd .form-control {
+margin-bottom: 10px;
+}
+
+.form-lostpasswd .form-control:focus {
   z-index: 2;
 }
 
