added mailer; implemented all of frontend client features; lots of bugfixes, tweaks, . . .

--- a/oadmin/src/main/resources/static/css/index.styl
+++ b/oadmin/src/main/resources/static/css/index.styl
@@ -1,23 +1,35 @@
 @import './mixin'
 
-body
-  color: #222
+// body
+//   color: #222
 
-h2
-  text-align: center
-  font-size: 22px
+// h2
+//   text-align: center
+//   font-size: 22px
 
-p
-  text-align: center
-  font-size: 16px
+// p
+//   text-align: center
+//   font-size: 16px
 
 .navbar-form
-  max-width: 500px
+  width: 500px
 
 .page-header
   border-bottom: none
 
+.container .text-muted
+  margin: 20px 0
 
+footer {
+position: fixed;
+bottom: 10px;
+left: 38px;
+color: #999999;
+}
 
-
-
+#msg {
+position: absolute;
+left: 300px;
+top: 70px;
+display: none;
+}
