--- a/oadmin/src/main/resources/static/public/application.css
+++ b/oadmin/src/main/resources/static/public/application.css
@@ -1,4 +1,5 @@
-body{color:#222}
-h2{text-align:center;font-size:22px}
-p{text-align:center;font-size:16px}
-.navbar-form{max-width:500px}
+.navbar-form{width:500px}
+.page-header{border-bottom:none}
+.container .text-muted{margin:20px 0}
+footer{position:fixed;bottom:10px;left:38px;color:#999}
+#msg{position:absolute;left:300px;top:70px;display:none}
