--- a/oadmin/src/main/resources/static/public/css/rstpasswd.css
+++ b/oadmin/src/main/resources/static/public/css/rstpasswd.css
@@ -3,35 +3,24 @@ body {
   padding-bottom: 40px;
 }
 
-.page-header {
-  border-bottom:none;
-  margin-bottom: 0;
-}
+.page-header{border-bottom:none}
 
-.form-lostpasswd {  
+.form-rstpasswd {  
   padding: 15px;
 }
 
-.form-lostpasswd .form-lostpasswd-heading {
-  margin-bottom: 10px;
-}
-
-.form-lostpasswd .form-control {
-  max-width: 330px;
+.form-rstpasswd .form-control {
   position: relative;
   font-size: 16px;
   height: auto;
-  padding: 10px;  
+  padding: 10px;
+  max-width: 330px;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-#recaptcha, .form-lostpasswd .form-control {
-margin-bottom: 10px;
-}
-
-.form-lostpasswd .form-control:focus {
+.form-rstpasswd .form-control:focus {
   z-index: 2;
 }
 
@@ -83,14 +72,12 @@ margin-bottom: 10px;
 .container .text-muted {
   margin: 20px 0;
 }
-#footer {
-  height: auto;
-  bottom: 0;
-  left: 0;
-  position: fixed;
-  width: 100%;
+footer {
+position: fixed;
+bottom: 10px;
+left: 38px;
+color: #999999;
 }
-
 #msg {
 position: absolute;
 left: 30%;
