--- a/oadmin/src/main/resources/static/public/css/signin.css
+++ b/oadmin/src/main/resources/static/public/css/signin.css
@@ -3,9 +3,9 @@ body {
   padding-bottom: 40px;
 }
 
-.form-signin {
+.form-signin {  
   max-width: 330px;
-  padding: 15px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 .page-header {
@@ -13,15 +13,25 @@ body {
 }
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
-  margin-bottom: 10px;
+  /*margin-bottom: 10px;*/
 }
 .form-signin .checkbox {
+}
+.form-signin .checkbox, .form-signin .forgot_passwd {
   font-weight: normal;
   display: inline-block;
 }
 .form-signin .forgot_passwd {
-margin-top: 10px;
+/*margin-top: 10px;*/
+position: absolute;
+top: 378.26702880859375px;
+left: 53.01844264228562%;
 }
+
+body.chrome .form-signin .forgot_passwd {
+  top: 385.26702880859375px;
+}
+
 .form-signin .form-control {
   position: relative;
   font-size: 16px;
@@ -34,7 +44,7 @@ margin-top: 10px;
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="text"] {
+.form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
@@ -47,4 +57,19 @@ margin-top: 10px;
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+footer {
+position: fixed;
+bottom: 10px;
+left: 38px;
+color: #999999;
+}
+#msgs {
+padding: 0 300px;
+margin: 0 auto;
+height: 80px;
+}
+#msg {
+margin: 0 auto;
+display: none;
 }
